# magicoolitka

./: pyproject.toml
app/: __main__.py  utility.py
app/routes/: index.py  library.py  obscura.py
app/templates/: generator.html  index.html  poem.html
poems/: carefully.txt  eternal-sleep.txt  go-quickly.txt  inventor.txt  lamp-light.txt  stonebreaker.txt  ting.txt  wind.txt
static/: boba.js  style.css
