[tool.poetry]
name = "magicoolitka"
version = "0.1.0"
description = ""
authors = ["timoniq <arseny.kriuchkov@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.1"
jinja2 = "^3.1.3"
uvicorn = "^0.29.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
